WebUI: automatically separate footer from content with a horizontal rule
FossilOrigin-Name: 6d48212b19f8021a2cd07c425bcf76fcc1c9689a0cedbfbca4a72743cdbedf5c

--- a/www/changes.wiki
+++ b/www/changes.wiki
@@ -23,6 +23,9 @@
   *  Allow to specify a zettel to serve footer content via runtime
      comfiguration <tt>footer-zettel</tt>. Can be overwritten by user zettel.
      (minor: webui)
+  *  Footer data is automatically separated by a thematic break / horizontal
+     rule. If you do not like it, you have to update the base template.
+     (minor: webui)
   *  Allow to set runtime configuration <tt>home-zettel</tt> in the user zettel
      to make it user-specific.
      (minor: webui)
