Enhance zettel context
FossilOrigin-Name: 0ced212fc5ec5ecdc67a459a0c5a343060552852b0fc95f9f17dbf689627c78a

--- a/www/changes.wiki
+++ b/www/changes.wiki
@@ -14,6 +14,9 @@
   *  Allow to encode zettel in Markdown. Please note: not every aspect of
      a zettel can be encoded in Markdown. Those aspects will be ignored.
      (minor: api)
+  *  Enhance zettel context by raising the importance of folge zettel (and
+     similar).
+     (minor: api, webui)
   *  Interpret zettel files with extension <tt>.webp</tt> as an binary image
      file format.
      (minor)
