Manual: Zettelmarkup cheat sheet
FossilOrigin-Name: 5149dbdb5bacdbf5cca74b1a2398f5ce627eece929eef6950a8c108ad7e89a65

--- a/www/changes.wiki
+++ b/www/changes.wiki
@@ -34,6 +34,8 @@
      (minor: webui)
   *  Serve favicon.ico from the asset directory.
      (minor: webui)
+  *  Zettelmarkup cheat sheet
+     (minor: manual)
   *  Runtime configuration key <tt>footer-html</tt> will be removed in Version
      0.10.0. Please use <tt>footer-zettel</tt> instead.
      (deprecated: webui)
