--- a/www/changes.wiki
+++ b/www/changes.wiki
@@ -2,6 +2,10 @@
 
 <a name="0_10"></a>
 <h2>Changes for Version 0.10.0 (pending)</h2>
+  *  Remove support for endpoints <tt>/j, /m, /q, /p, /v</tt>. Their functions
+     are merged into endpoint <tt>/z</tt>. This was announced in version 0.9.0.
+     Please use only client library with at least version 0.10.0 too.
+     (breaking: api)
   *  Remove support for runtime configuration key <tt>footer-html</tt>. Use
      <tt>footer-zettel</tt> instead. Deprecated in version 0.9.0.
      (breaking: webui)
