WebUI: add list of metadata keys in a query
FossilOrigin-Name: 0fd83d08efc3c15b2e3ec5b485ea2731be3f6c9db2c51a1def50cb554568bc5e

--- a/www/changes.wiki
+++ b/www/changes.wiki
@@ -9,6 +9,9 @@
   *  Remove support for runtime configuration key <tt>footer-html</tt>. Use
      <tt>footer-zettel</tt> instead. Deprecated in version 0.9.0.
      (breaking: webui)
+  *  Allow to show all used metadata keys, linked with their occurrences and
+     their values.
+     (minor: webui)
   *  Mark ZSON encoding as deprecated for v0.11.0. Please use Sexpr encoding
      instead.
      (deprecated)
