WebUI: initial support for storing zettel lists into a zettel
FossilOrigin-Name: e74021fbc980c3b9f3f6e5ecef30d94e4581f2bd6d37b5c163369c7030f45d3b

--- a/www/changes.wiki
+++ b/www/changes.wiki
@@ -9,6 +9,8 @@
   *  Remove support for runtime configuration key <tt>footer-html</tt>. Use
      <tt>footer-zettel</tt> instead. Deprecated in version 0.9.0.
      (breaking: webui)
+  *  Save a query into a zettel to freeze it.
+     (major: webui)
   *  Allow to show all used metadata keys, linked with their occurrences and
      their values.
      (minor: webui)
