--- a/www/changes.wiki
+++ b/www/changes.wiki
@@ -1,7 +1,10 @@
 <title>Change Log</title>
 
+<a name="0_11"></a>
+<h2>Changes for Version 0.11.0 (pending)</h2>
+
 <a name="0_10"></a>
-<h2>Changes for Version 0.10.0 (pending)</h2>
+<h2>Changes for Version 0.10.0 (2023-01-24)</h2>
   *  Remove support for endpoints <tt>/j, /m, /q, /p, /v</tt>. Their functions
      are merged into endpoint <tt>/z</tt>. This was announced in version 0.9.0.
      Please use only client library with at least version 0.10.0 too.
@@ -14,9 +17,11 @@
   *  Allow to show all used metadata keys, linked with their occurrences and
      their values.
      (minor: webui)
-  *  Mark ZSON encoding as deprecated for v0.11.0. Please use Sexpr encoding
+  *  Mark ZJSON encoding as deprecated for v0.11.0. Please use Sexpr encoding
      instead.
      (deprecated)
+  *  Some smaller bug fixes and improvements, to the software and to the
+     documentation.
 
 <a name="0_9"></a>
 <h2>Changes for Version 0.9.0 (2022-12-12)</h2>
