Remove support for ZJSON encoding
FossilOrigin-Name: 81e47aabc3683bd0ba2184547f7b4e886584dac5d8b53babd43d99c795637228

--- a/www/changes.wiki
+++ b/www/changes.wiki
@@ -2,6 +2,9 @@
 
 <a name="0_11"></a>
 <h2>Changes for Version 0.11.0 (pending)</h2>
+  *  Remove ZJSON encoding. It was announced in version 0.10.0. Use Sexpr
+     encoding instead.
+     (breaking)
 
 <a name="0_10"></a>
 <h2>Changes for Version 0.10.0 (2023-01-24)</h2>
