--- a/www/changes.wiki
+++ b/www/changes.wiki
@@ -1,12 +1,18 @@
 <title>Change Log</title>
 
-<a name="0_11"></a>
+<a id="0_11"></a>
 <h2>Changes for Version 0.11.0 (pending)</h2>
   *  Remove ZJSON encoding. It was announced in version 0.10.0. Use Sexpr
      encoding instead.
      (breaking)
+  *  Add SHTML encoding. This allows to ensure the quality of generated HTML
+     code. In addition, clients might use it, because it is easier to parse and
+     manipulate than ordinary HTML. In the future, HTML template zettel will
+     probably also use SHTML, deprecating the current Mustache syntax (which
+     was added in [#0_0_9|0.0.9]).
+     (major)
 
-<a name="0_10"></a>
+<a id="0_10"></a>
 <h2>Changes for Version 0.10.1 (2023-01-30)</h2>
   *  Show button to save a query into a zettel only when the current user has
      authorization to do it.
@@ -31,7 +37,7 @@
   *  Some smaller bug fixes and improvements, to the software and to the
      documentation.
 
-<a name="0_9"></a>
+<a id="0_9"></a>
 <h2>Changes for Version 0.9.0 (2022-12-12)</h2>
   *  Remove support syntax <tt>pikchr</tt>. Although it was a nice idea to
      include it into Zettelstore, the implementation is too brittle (w.r.t. the
@@ -81,7 +87,7 @@
   *  Some smaller bug fixes and improvements, to the software and to the
      documentation.
 
-<a name="0_8"></a>
+<a id="0_8"></a>
 <h2>Changes for Version 0.8.0 (2022-10-20)</h2>
   *  Remove support for tags within zettel content. Removes also property
      metadata keys <tt>all-tags</tt> and <tt>computed-tags</tt>. Deprecated in
@@ -121,7 +127,7 @@
   *  Some smaller bug fixes and improvements, to the software and to the
      documentation.
 
-<a name="0_7"></a>
+<a id="0_7"></a>
 <h2>Changes for Version 0.7.1 (2022-09-18)</h2>
   *  Produce a RSS feed compatible to Miniflux.
      (minor)
@@ -208,7 +214,7 @@
   *  Some smaller bug fixes and improvements, to the software and to the
      documentation.
 
-<a name="0_6"></a>
+<a id="0_6"></a>
 <h2>Changes for Version 0.6.2 (2022-08-22)</h2>
   *  Recognize renaming of zettel file external to Zettelstore.
      (bug)
@@ -249,7 +255,7 @@
   *  Some smaller bug fixes and improvements, to the software and to the
      documentation.
 
-<a name="0_5_0"></a>
+<a id="0_5_0"></a>
 <h2>Changes for Version 0.5.1 (2022-08-02)</h2>
   *  Log missing authentication tokens in debug level (was: sense level)
      (major)
@@ -314,7 +320,7 @@
   *  Many smaller bug fixes and improvements, to the software and to the
      documentation.
 
-<a name="0_4"></a>
+<a id="0_4"></a>
 <h2>Changes for Version 0.4 (2022-03-08)</h2>
   *  Encoding &ldquo;djson&rdquo; renamed to &ldquo;zjson&rdquo; (<em>zettel
      json</em>).
@@ -370,7 +376,7 @@
   *  Many smaller bug fixes and improvements, to the software and to the
      documentation.
 
-<a name="0_3"></a>
+<a id="0_3"></a>
 <h2>Changes for Version 0.3 (2022-02-09)</h2>
   *  Zettel files with extension <tt>.meta</tt> are now treated as content
      files. Previoulsy, they were interpreted as metadata files. The
@@ -392,7 +398,7 @@
   *  Many smaller bug fixes and improvements, to the software and to the
      documentation.
 
-<a name="0_2"></a>
+<a id="0_2"></a>
 <h2>Changes for Version 0.2 (2022-01-19)</h2>
   *  v0.2.1 (2021-02-01) updates the license year in some documents
   *  Remove support for <tt>;;small text;;</tt> Zettelmarkup.
@@ -458,7 +464,7 @@
   *  Many smaller bug fixes and improvements, to the software and to the
      documentation.
 
-<a name="0_1"></a><a name="0_1_0"></a>
+<a id="0_1"></a><a id="0_1_0"></a>
 <h2>Changes for Version 0.1 (2021-11-11)</h2>
   *  v0.1.3 (2021-12-15) fixes a bug where the modification date could be set
      when a new zettel is created.
@@ -523,7 +529,7 @@
   *  Many smaller bug fixes and improvements, to the software and to the
      documentation.
 
-<a name="0_0_15"></a>
+<a id="0_0_15"></a>
 <h2>Changes for Version 0.0.15 (2021-09-17)</h2>
   *  Move again endpoint characters for authentication to make room for future
      features. WebUI authentication moves from <tt>/a</tt> to <tt>/i</tt>
@@ -578,7 +584,7 @@
   *  Many smaller bug fixes and improvements, to the software and to the
      documentation.
 
-<a name="0_0_14"></a>
+<a id="0_0_14"></a>
 <h2>Changes for Version 0.0.14 (2021-07-23)</h2>
   *  Rename &ldquo;place&rdquo; into &ldquo;box&rdquo;. This also affects the
      configuration keys to specify boxes <tt>box-uri<em>X</em></tt> (previously
@@ -627,7 +633,7 @@
   *  Many smaller bug fixes and improvements, to the software and to the
      documentation.
 
-<a name="0_0_13"></a>
+<a id="0_0_13"></a>
 <h2>Changes for Version 0.0.13 (2021-06-01)</h2>
   *  Startup configuration <tt>box-<em>X</em>-uri</tt> (where <em>X</em> is a
      number greater than zero) has been renamed to
@@ -671,7 +677,7 @@
   *  Many smaller bug fixes and improvements, to the software and to the
      documentation.
 
-<a name="0_0_12"></a>
+<a id="0_0_12"></a>
 <h2>Changes for Version 0.0.12 (2021-04-16)</h2>
   *  Raise the per-process limit of open files on macOS to 1.048.576. This
      allows most macOS users to use at least 500.000 zettel. That should be
@@ -690,7 +696,7 @@
      limit of open files.
      (minor)
 
-<a name="0_0_11"></a>
+<a id="0_0_11"></a>
 <h2>Changes for Version 0.0.11 (2021-04-05)</h2>
   *  New box schema "file" allows to read zettel from a ZIP file.
      A zettel collection can now be packaged and distributed easier.
@@ -731,7 +737,7 @@ are three options to mitigate this limitation temporarily:
   #  You setup a virtualization environment to run Zettelstore on Linux or Windows.
   #  You wait for version 0.0.12 which addresses this issue.
 
-<a name="0_0_10"></a>
+<a id="0_0_10"></a>
 <h2>Changes for Version 0.0.10 (2021-02-26)</h2>
   *  Menu item &ldquo;Home&rdquo; now redirects to a home zettel.
      Its default identifier is <tt>000100000000</tt>.
@@ -775,7 +781,7 @@ are three options to mitigate this limitation temporarily:
      (minor: infrastructure)
   *  Many smaller bug fixes and improvements, to the software and to the documentation.
 
-<a name="0_0_9"></a>
+<a id="0_0_9"></a>
 <h2>Changes for Version 0.0.9 (2021-01-29)</h2>
 This is the first version that is managed by [https://fossil-scm.org|Fossil]
 instead of GitHub. To access older versions, use the Git repository under
@@ -855,7 +861,7 @@ instead of GitHub. To access older versions, use the Git repository under
              editable.
   *  (minor) Do not show computed metadata in edit forms anymore.
 
-<a name="0_0_8"></a>
+<a id="0_0_8"></a>
 <h2>Changes for Version 0.0.8 (2020-12-23)</h2>
 <h3>Server / API</h3>
   *  (bug) Zettel files with extension <tt>.jpg</tt> and without metadata will
@@ -943,7 +949,7 @@ instead of GitHub. To access older versions, use the Git repository under
              more information. (This change also applies to the server itself,
              but it is more suited to the WebUI user.)
 
-<a name="0_0_7"></a>
+<a id="0_0_7"></a>
 <h2>Changes for Version 0.0.7 (2020-11-24)</h2>
   *  With this version, Zettelstore and this manual got a new license, the
      [https://joinup.ec.europa.eu/collection/eupl|European Union Public
@@ -951,7 +957,7 @@ instead of GitHub. To access older versions, use the Git repository under
      to stay with the old licenses (AGPLv3+, CC BY-SA 4.0), you are free to
      fork from the previous version.
 
-<a name="0_0_6"></a>
+<a id="0_0_6"></a>
 <h2>Changes for Version 0.0.6 (2020-11-23)</h2>
 <h3>Server</h3>
   *  (major) Rename identifier of <i>Zettelstore Runtime Configuration</i> to
@@ -1039,26 +1045,26 @@ instead of GitHub. To access older versions, use the Git repository under
              a little smaller (previous: 1.6, now 1.4) and move list items to
              the left.
 
-<a name="0_0_5"></a>
+<a id="0_0_5"></a>
 <h2>Changes for Version 0.0.5 (2020-10-22)</h2>
   *  Application Programming Interface (API) to allow external software to
      retrieve zettel data from the Zettelstore.
   *  Specify boxes, where zettel are stored, via an URL.
   *  Add support for a custom footer.
 
-<a name="0_0_4"></a>
+<a id="0_0_4"></a>
 <h2>Changes for Version 0.0.4 (2020-09-11)</h2>
   *  Optional user authentication/authorization.
   *  New sub-commands <tt>file</tt> (use Zettelstore as a command line filter),
      <tt>password</tt> (for authentication), and <tt>config</tt>.
 
-<a name="0_0_3"></a>
+<a id="0_0_3"></a>
 <h2>Changes for Version 0.0.3 (2020-08-31)</h2>
   *  Starting Zettelstore has been changed by introducing sub-commands.
      This change is also reflected on the server installation procedures.
   *  Limitations on renaming zettel has been relaxed.
 
-<a name="0_0_2"></a>
+<a id="0_0_2"></a>
 <h2>Changes for Version 0.0.2 (2020-08-28)</h2>
   *  Configuration zettel now has ID <tt>00000000000001</tt> (previously:
      <tt>00000000000000</tt>).
@@ -1069,6 +1075,6 @@ instead of GitHub. To access older versions, use the Git repository under
      To mimic the previous behaviour, a zettel with ID <tt>00000000040001</tt>
      is introduced. You can change it if you need a different template zettel.
 
-<a name="0_0_1"></a>
+<a id="0_0_1"></a>
 <h2>Changes for Version 0.0.1 (2020-08-21)</h2>
   *  Initial public release.
