--- a/www/changes.wiki
+++ b/www/changes.wiki
@@ -8,6 +8,12 @@
   *  Metadata keys with suffix <tt>-date</tt> and <tt>-time</tt> are treated as
      timestamp values.
      (minor)
+  *  <tt>sexpr</tt> zettel encoding is now documented in the manual.
+     (minor: manual)
+  *  The use of the <tt>json</tt> zettel encoding is deprecated. Support for
+     this encoding may be removed in future versions. Please use the new
+     <tt>data</tt> encoding instead.
+     (deprecated: api)
 
 <a id="0_11"></a>
 <h2>Changes for Version 0.11.1 (2023-03-28)</h2>
