--- a/www/changes.wiki
+++ b/www/changes.wiki
@@ -10,6 +10,9 @@
      (minor)
   *  <tt>sexpr</tt> zettel encoding is now documented in the manual.
      (minor: manual)
+  *  Build tool allows to install / update external Go tools needed to build
+     the software.
+     (minor)
   *  The use of the <tt>json</tt> zettel encoding is deprecated. Support for
      this encoding may be removed in future versions. Please use the new
      <tt>data</tt> encoding instead.
