Fix: render footer zettel on all WebUI pages correctly
FossilOrigin-Name: ba4ca6730f2f059cf3321e8e5d321082f9e0560d0f692c7610de64e1065c5db9

--- a/www/changes.wiki
+++ b/www/changes.wiki
@@ -6,6 +6,8 @@
      Previously, this was a separate call, without adding a search expression
      / action expression.
      (breaking)
+  *  Render footer zettel on all WebUI pages.
+     (fix: webui)
   *  New metadata key <tt>expire</tt> records a timestamp when a zettel should
      be treated as, well, expired.
      (minor)
