--- a/www/changes.wiki
+++ b/www/changes.wiki
@@ -2,8 +2,34 @@
 
 <a id="0_12"></a>
 <h2>Changes for Version 0.12.0 (pending)</h2>
+  *  Query expression is allowed to search for the "context" of a zettel.
+     Previously, this was a separate call, without adding a search expression
+     / action expression.
+     (breaking)
+  *  Render footer zettel on all WebUI pages.
+     (fix: webui)
+  *  New metadata key <tt>expire</tt> records a timestamp when a zettel should
+     be treated as, well, expired.
+     (minor)
+  *  Metadata keys with suffix <tt>-date</tt> and <tt>-time</tt> are treated as
+     timestamp values.
+     (minor)
+  *  <tt>sexpr</tt> zettel encoding is now documented in the manual.
+     (minor: manual)
+  *  Build tool allows to install / update external Go tools needed to build
+     the software.
+     (minor)
+  *  The use of the <tt>json</tt> zettel encoding is deprecated. Support for
+     this encoding may be removed in future versions. Please use the new
+     <tt>data</tt> encoding instead.
+     (deprecated: api)
 
 <a id="0_11"></a>
+<h2>Changes for Version 0.11.2 (2023-04-16)</h2>
+  *  Render footer zettel on all WebUI pages.
+     Backported from 0.12.0.
+     (fix: webui)
+
 <h2>Changes for Version 0.11.1 (2023-03-28)</h2>
   *  Make <tt>PICK</tt> search term a little bit more deterministic so that the
      &ldquo;Save As Zettel&rdquo; button produces the same list.
