Add new query operator "=" to compare for equality. ":" now depends on the value type.
FossilOrigin-Name: 30a2aa70248bbb70b786d1f4760177ccae7d2d113ec9891fe78159a2b1108eaa

--- a/www/changes.wiki
+++ b/www/changes.wiki
@@ -8,6 +8,9 @@
      (breaking)
   *  Render footer zettel on all WebUI pages.
      (fix: webui)
+  *  Query search operator "=" now compares for equality, ":" compares
+     depending on the value type.
+     (minor)
   *  New metadata key <tt>expire</tt> records a timestamp when a zettel should
      be treated as, well, expired.
      (minor)
