--- a/www/index.wiki
+++ b/www/index.wiki
@@ -22,8 +22,7 @@ access Zettelstore via its API more easily,
 software, which often connects to Zettelstore via its API. Some of the software
 packages may be experimental.
 
-[https://twitter.com/zettelstore|Stay]
-<a rel="me" href="https://nerdculture.de/@zettelstore">tuned</a>&nbsp;&hellip;
+[https://twitter.com/search?q=%40t73fde%20zettelstore&f=live|Stay tuned]&nbsp;&hellip;
 <hr>
 <h3>Latest Release: 0.11.2 (2023-04-16)</h3>
   *  [./download.wiki|Download]
