Cleanup WebUI metadata
FossilOrigin-Name: b67f43e410920c0210eea2ae93d96720f95b9b1432f6b9d49407c7afdfd28550

--- a/www/changes.wiki
+++ b/www/changes.wiki
@@ -36,6 +36,8 @@
   *  Build tool allows to install / update external Go tools needed to build
      the software.
      (minor)
+  *  Show only useful metadata on WebUI, not the internal metadata.
+     (minor: webui)
   *  The use of the <tt>json</tt> zettel encoding is deprecated. Support for
      this encoding may be removed in future versions. Please use the new
      <tt>data</tt> encoding instead.
