WebUI: allow to create child zettel from a given zettel
FossilOrigin-Name: 8cb81c50a3b2a802cfa5432ac49c06fc8635aad421f4c3468c73ccacee41dab2

--- a/www/changes.wiki
+++ b/www/changes.wiki
@@ -2,6 +2,8 @@
 
 <a id="0_13"></a>
 <h2>Changes for Version 0.13.0 (pending)</h2>
+  *  Allow to create a child from a given zettel.
+     (minor: webui)
 
 <a id="0_12"></a>
 <h2>Changes for Version 0.12.0 (2023-06-05)</h2>
