WebUI: make zettel form friendlier: auto-prepend '#' to tags; ensure role and syntax field to be just a word.
FossilOrigin-Name: 630b34626125b4005e51651ab8fab3a385f8868e5e02c8b3554b162c3aed609f

--- a/www/changes.wiki
+++ b/www/changes.wiki
@@ -4,6 +4,9 @@
 <h2>Changes for Version 0.13.0 (pending)</h2>
   *  Allow to create a child from a given zettel.
      (minor: webui)
+  *  Make zettel entry/edit form a little friendlier: auto-prepend missing '#'
+     to tags; ensure that role and syntax receive just a word.
+     (minor: webui)
 
 <a id="0_12"></a>
 <h2>Changes for Version 0.12.0 (2023-06-05)</h2>
