Always log name of configuration file
FossilOrigin-Name: 10d1a1c8d5c0c57daf415be6d07fd8f8039edeacd62d1b451309d1f5efb691c8

--- a/www/changes.wiki
+++ b/www/changes.wiki
@@ -14,6 +14,10 @@
   *  Make zettel entry/edit form a little friendlier: auto-prepend missing '#'
      to tags; ensure that role and syntax receive just a word.
      (minor: webui)
+  *  Use a zettel that defines builtins for evaluating WebUI templates.
+     (minor: webui)
+  *  Always log the found configuration file.
+     (minor: server)
 
 <a id="0_12"></a>
 <h2>Changes for Version 0.12.0 (2023-06-05)</h2>
