WebUI: add links to retrieve result of a query in other formats
FossilOrigin-Name: 556f4b29d0168ed29bbbe8c45bffe74c1fa04eed6ee10ba34755cb467f53cdfd

--- a/www/changes.wiki
+++ b/www/changes.wiki
@@ -16,6 +16,8 @@
      (minor: webui)
   *  Use a zettel that defines builtins for evaluating WebUI templates.
      (minor: webui)
+  *  Add links to retrieve result of a query in other formats.
+     (minor: webui)
   *  Always log the found configuration file.
      (minor: server)
 
