Add support for metadata key 'folge-role'
FossilOrigin-Name: e3e37a1bdfaf2941e5d6a2cc2322bc46b73fb85ca65f3ef92f6dedd7d1be2a2e

--- a/www/changes.wiki
+++ b/www/changes.wiki
@@ -9,6 +9,8 @@
      numbers, timestamps, and zettel identifier. They are not supported for
      full-test search.
      (breaking: api, webui)
+  *  Add support for metadata key <tt>folge-role</tt>.
+     (minor)
   *  Allow to create a child from a given zettel.
      (minor: webui)
   *  Make zettel entry/edit form a little friendlier: auto-prepend missing '#'
