--- a/www/changes.wiki
+++ b/www/changes.wiki
@@ -9,6 +9,10 @@
      numbers, timestamps, and zettel identifier. They are not supported for
      full-test search.
      (breaking: api, webui)
+  *  Change syntax for context query to <tt>zid ... CONTEXT</tt>. This will
+     allow to add more directives that operate on zettel identifier. Old syntax
+     <tt>CONTEXT zid</tt> will be removed in 0.14.
+     (major, deprecated)
   *  Add support for metadata key <tt>folge-role</tt>.
      (minor)
   *  Allow to create a child from a given zettel.
