--- a/www/index.wiki
+++ b/www/index.wiki
@@ -22,12 +22,12 @@ access Zettelstore via its API more easily,
 software, which often connects to Zettelstore via its API. Some of the software
 packages may be experimental.
 
-[https://twitter.com/search?q=%40t73fde%20zettelstore&f=live|Stay tuned]&nbsp;&hellip;
+[https://mastodon.social/tags/Zettelstore|Stay tuned]&nbsp;&hellip;
 <hr>
 <h3>Latest Release: 0.12.0 (2023-06-05)</h3>
   *  [./download.wiki|Download]
   *  [./changes.wiki#0_12|Change summary]
-  *  [/timeline?p=v0.12.0&bt=v0.11.0&y=ci|Check-ins for version 0.12.0],
+  *  [/timeline?p=v0.12.0&bt=v0.10.0&y=ci|Check-ins for version 0.12.0],
      [/vdiff?to=v0.12.0&from=v0.11.0|content diff]
   *  [/timeline?df=v0.12.0&y=ci|Check-ins derived from the 0.12.0 release],
      [/vdiff?from=v0.12.0&to=trunk|content diff]
