--- a/www/changes.wiki
+++ b/www/changes.wiki
@@ -9,10 +9,24 @@
      numbers, timestamps, and zettel identifier. They are not supported for
      full-test search.
      (breaking: api, webui)
+  *  The API endpoint <tt>/o/{ID}</tt> (order of zettel ID) is no longer
+     available. Please use the query expression <tt>{ID} ITEMS</tt> instead.
+     (breaking: api)
   *  Change syntax for context query to <tt>zid ... CONTEXT</tt>. This will
      allow to add more directives that operate on zettel identifier. Old syntax
      <tt>CONTEXT zid</tt> will be removed in 0.14.
      (major, deprecated)
+  *  Add query directive <tt>ITEMS</tt> that will produce a list of metadata
+     of all zettel that are referenced by the originating zettel in a top-level
+     list. It replaces the API endpoint <tt>/o/{ID}</tt> (and makes it more
+     useful).
+     (major: api, webui)
+  *  Add query directive <tt>IDENT</tt> to distinguish a search for a zettel
+     identifier (&ldquo;{ID}&rdquo;), that will list all metadata of zettel
+     containing that zettel identifier, and a request to just list the metadata
+     of given zettel (&ldquo;{ID} IDENT&rdquo;). The latter could be filtered
+     further.
+     (minor: api, webui)
   *  Add support for metadata key <tt>folge-role</tt>.
      (minor)
   *  Allow to create a child from a given zettel.
