Remove support for JSON encoding
FossilOrigin-Name: ef86477d7daac36f7c3c8bcf4712c8d75f82f64a84b6ea64ce09c793b75198c6

--- a/www/changes.wiki
+++ b/www/changes.wiki
@@ -2,6 +2,9 @@
 
 <a id="0_14"></a>
 <h2>Changes for Version 0.14.0 (pending)</h2>
+  *  Remove support for JSON. This was marked deprecated in version 0.12.0. Use
+     the <tt>data</tt> encoding instead, a form of symbolic expressions.
+     (breaking: api; minor: webui)
 
 <a id="0_13"></a>
 <h2>Changes for Version 0.13.0 (2023-08-07)</h2>
