--- a/www/index.wiki
+++ b/www/index.wiki
@@ -16,11 +16,13 @@ zettelstore software, running in read-only mode.
 The software, including the manual, is licensed under the
 [/file?name=LICENSE.txt&ci=trunk|European Union Public License 1.2 (or later)].
 
-[https://zettelstore.de/client|Zettelstore Client] provides client software to
-access Zettelstore via its API more easily,
-[https://zettelstore.de/contrib|Zettelstore Contrib] contains contributed
-software, which often connects to Zettelstore via its API. Some of the software
-packages may be experimental.
+  *  [https://zettelstore.de/client|Zettelstore Client] provides client
+     software to access Zettelstore via its API more easily.
+  *  [https://zettelstore.de/contrib|Zettelstore Contrib] contains contributed
+     software, which often connects to Zettelstore via its API. Some of the
+     software packages may be experimental.
+  *  [https://zettelstore.de/sx|Sx] provides an evaluator for symbolic
+     expressions, which is unsed for HTML templates and more.
 
 [https://mastodon.social/tags/Zettelstore|Stay tuned]&nbsp;&hellip;
 <hr>
