--- a/www/changes.wiki
+++ b/www/changes.wiki
@@ -8,6 +8,9 @@
   *  Remove deprecated syntax for a context list: <tt>CONTEXT zid</tt>. Use
      <tt>zid CONTEXT</tt> instead. It was deprecated in version 0.13.0.
      (breaking: api, webui, zettelmarkup)
+  *  Allow to load sx code from multiple zettel; dependencies are specified
+     using <tt>precursor</tt> metadata.
+     (major: webui)
 
 <a id="0_13"></a>
 <h2>Changes for Version 0.13.0 (2023-08-07)</h2>
