Replace CSS-role-map handling with more general sx-based HTML generation of specific parts in resulting document
FossilOrigin-Name: bdc1127d0f8b03d152193516b9d334b4a4b0898b2096db30b3bbc37de4c655be

--- a/www/changes.wiki
+++ b/www/changes.wiki
@@ -8,6 +8,9 @@
   *  Remove deprecated syntax for a context list: <tt>CONTEXT zid</tt>. Use
      <tt>zid CONTEXT</tt> instead. It was deprecated in version 0.13.0.
      (breaking: api, webui, zettelmarkup)
+  *  Replace CSS-role-map mechanism with a more general Sx-based one: user
+     specific code may generates parts of resulting HTML document.
+     (breaking: webui)
   *  Allow to load sx code from multiple zettel; dependencies are specified
      using <tt>precursor</tt> metadata.
      (major: webui)
