WebUI: initial version of tag zettel, aka meta tags
FossilOrigin-Name: 83fed2cbcda8da7f8cc2633a274c7cdd80cbe93662b44ae53458d9f2e39dc0ee

--- a/www/changes.wiki
+++ b/www/changes.wiki
@@ -11,6 +11,9 @@
   *  Replace CSS-role-map mechanism with a more general Sx-based one: user
      specific code may generates parts of resulting HTML document.
      (breaking: webui)
+  *  Allow meta-tags, i.e. zettel for a specific tag. Meta-tags have the tag
+     name as a title and specify the role "tag".
+     (major: webui)
   *  Allow to load sx code from multiple zettel; dependencies are specified
      using <tt>precursor</tt> metadata.
      (major: webui)
