WebUI: link to create missing tag zettel
FossilOrigin-Name: 67080318e9f42ae8ce9d9b62ea38c6e45174bb848f332cdd9edd2f670e9d17a1

--- a/www/changes.wiki
+++ b/www/changes.wiki
@@ -4,6 +4,10 @@
 <h2>Changes for Version 0.15.0 (pending)</h2>
   *  Allow to determine a tag zettel for a given tag.
      (minor: api, webui)
+  *  Present user the option to create a (missing) tag zettel (in list view).
+     Results in a new predefined zettel with identifier 00000000090003, which
+     is a template for new tag zettel.
+     (minor: webui)
 
 <a id="0_14"></a>
 <h2>Changes for Version 0.14.0 (2023-09-22)</h2>
