API: add support for role zettel
FossilOrigin-Name: 9fba08c835b7f57df140e336efc4e51552cc538ac8ab275fd9f2bee72abd4160

--- a/www/changes.wiki
+++ b/www/changes.wiki
@@ -2,6 +2,8 @@
 
 <a id="0_16"></a>
 <h2>Changes for Version 0.16.0 (pending)</h2>
+  *  Allow to determine a role zettel for a given role.
+     (major: api)
   *  Timestamp values can be abbrevated by omitting most of its components.
      Previously, such values that are not in the format YYYYMMDDhhmmss were
      ignored. Now the following formats are also allowed: YYYY, YYYYMM,
